objects/Submission__c.object
<CustomObject>
    <fields>
        <fullName>Abbrv_Customer_Inquiry_Input__c</fullName>
        <defaultValue>"(blank)"</defaultValue>
        <description>CX Tracker</description>
        <label>Abbrv Customer Inquiry/Input</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abbrv_SME_Response__c</fullName>
        <defaultValue>"(blank)"</defaultValue>
        <description>CX Tracker</description>
        <label>Abbrv SME Response</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <label>Agency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CX_POC_Comments__c</fullName>
        <description>CX Tracker</description>
        <inlineHelpText>Notes from the CX Team assigned to the Issue</inlineHelpText>
        <label>CX POC Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_OCAPPM__c</fullName>
        <description>CX Tracker</description>
        <inlineHelpText>Issue Category assigned by Point of Contact</inlineHelpText>
        <label>Inquiry Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Mobile Devices</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Records Management</fullName>
                </value>
                <value>
                    <fullName>Policy</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Need More Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commenter_Category__c</fullName>
        <label>Commenter Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academia</fullName>
                </value>
                <value>
                    <fullName>Academia/ Professional Societies</fullName>
                </value>
                <value>
                    <fullName>Alaska Native Corporations</fullName>
                </value>
                <value>
                    <fullName>Alaska NGOs</fullName>
                </value>
                <value>
                    <fullName>Congressional Delegate</fullName>
                </value>
                <value>
                    <fullName>Elected Official</fullName>
                </value>
                <value>
                    <fullName>Environmental NGO</fullName>
                </value>
                <value>
                    <fullName>EPA Document</fullName>
                </value>
                <value>
                    <fullName>Faith-Based Groups</fullName>
                </value>
                <value>
                    <fullName>Federal Government Agency</fullName>
                </value>
                <value>
                    <fullName>General Public</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>Industry - Fisheries/Fishing Tourism</fullName>
                </value>
                <value>
                    <fullName>Industry - Jewelry</fullName>
                </value>
                <value>
                    <fullName>Industry - Mineral Extraction</fullName>
                </value>
                <value>
                    <fullName>Industry - Other</fullName>
                </value>
                <value>
                    <fullName>Industry - Restaurant/Food Processing/Food Sales</fullName>
                </value>
                <value>
                    <fullName>Industry - Tourism/Outdoor Recreation</fullName>
                </value>
                <value>
                    <fullName>Local Government Agency</fullName>
                </value>
                <value>
                    <fullName>Local Government Agency/Elected Official</fullName>
                </value>
                <value>
                    <fullName>Local NGO</fullName>
                </value>
                <value>
                    <fullName>Mass Mailer</fullName>
                </value>
                <value>
                    <fullName>National Environmental NGO</fullName>
                </value>
                <value>
                    <fullName>National NGO</fullName>
                </value>
                <value>
                    <fullName>Non-Governmental Organization</fullName>
                </value>
                <value>
                    <fullName>Non-Regulated Community - General</fullName>
                </value>
                <value>
                    <fullName>Other NGOs</fullName>
                </value>
                <value>
                    <fullName>Private Citizen - Environmental Justice</fullName>
                </value>
                <value>
                    <fullName>Private Citizen - Expert</fullName>
                </value>
                <value>
                    <fullName>Private Citizen - General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commenter_Name__c</fullName>
        <label>Commenter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Inquiry_Input__c</fullName>
        <description>CX Tracker</description>
        <inlineHelpText>Text of the issue.</inlineHelpText>
        <label>Customer Inquiry/Input</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Docket_Posted__c</fullName>
        <label>Date Docket Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Docket_Number__c</fullName>
        <label>Docket Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EPA-HQ-OW-2017-0203</fullName>
                    <default>true</default>
                    <label>EPA-HQ-OW-2017-0203</label>
                </value>
                <value>
                    <fullName>EPA-R10-OW-2017-0369</fullName>
                </value>
                <value>
                    <fullName>EPA-HQ-OW-2017-0480</fullName>
                </value>
                <value>
                    <fullName>EPA-HQ-OW-2017-0644</fullName>
                </value>
                <value>
                    <fullName>EPA-HQ-OW-2017-0010</fullName>
                </value>
                <value>
                    <fullName>EPA-HQ-OW-2017-0203-SUPP</fullName>
                </value>
                <value>
                    <fullName>EPA-HQ-OW-2018-0056</fullName>
                </value>
                <value>
                    <fullName>EPA-HQ-OW-2018-0149</fullName>
                </value>
                <value>
                    <fullName>EPA-HQ-OW-2019-0405</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geographic_Origin__c</fullName>
        <label>Geographic Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tribe</fullName>
                </value>
                <value>
                    <fullName>Islands/Territories</fullName>
                </value>
                <value>
                    <fullName>Non-Alaska Tribe</fullName>
                </value>
                <value>
                    <fullName>Alaska (not Bristol Bay)</fullName>
                </value>
                <value>
                    <fullName>Bristol Bay Watershed</fullName>
                </value>
                <value>
                    <fullName>Nushagak and Kvichak Watershed</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_Snippets__c</fullName>
        <label>Snippets?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                    <default>true</default>
                    <label>Maybe</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inquirer_Email__c</fullName>
        <description>CX Tracker</description>
        <formula>Inquirer__r.Email</formula>
        <label>Inquirer's Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquirer_Phone__c</fullName>
        <description>CX Tracker</description>
        <formula>Inquirer__r.Phone</formula>
        <label>Inquirer's Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquirer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CX Tracker</description>
        <inlineHelpText>Name of the person raising the issue.</inlineHelpText>
        <label>Inquirer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissionsa441z</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inquiry_Closeout_Date__c</fullName>
        <description>CX Tracker</description>
        <label>Inquiry Closeout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inquiry_Date_Formatted__c</fullName>
        <description>CX Tracker</description>
        <formula>TEXT(MONTH(Inquiry_Date__c)) +'/'+ TEXT(DAY(Inquiry_Date__c)) +'/'+ TEXT(YEAR(Inquiry_Date__c))</formula>
        <label>Inquiry Date Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Date__c</fullName>
        <description>CX Tracker</description>
        <label>Inquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inquiry_Name__c</fullName>
        <description>CX Tracker</description>
        <inlineHelpText>Assigned title of Issue.</inlineHelpText>
        <label>Inquiry Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Time_to_Close__c</fullName>
        <description>CX Tracker</description>
        <formula>Inquiry_Closeout_Date__c - Inquiry_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inquiry - Time to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Letter_Type__c</fullName>
        <label>Submission Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unique Letter</fullName>
                </value>
                <value>
                    <fullName>Duplicate Letter</fullName>
                </value>
                <value>
                    <fullName>Similar Letter</fullName>
                </value>
                <value>
                    <fullName>Unique Submission</fullName>
                </value>
                <value>
                    <fullName>Duplicate Submission</fullName>
                </value>
                <value>
                    <fullName>Similar Submission</fullName>
                </value>
                <value>
                    <fullName>Public Hearing</fullName>
                </value>
                <value>
                    <fullName>Supporting Document (EPA)</fullName>
                </value>
                <value>
                    <fullName>Mass Mailing Campaign</fullName>
                </value>
                <value>
                    <fullName>Wrong docket</fullName>
                </value>
                <value>
                    <fullName>Modified Mass Mailer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mass_Mailing_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mass Mailing Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Record_Type_Pick__c</field>
                <operation>equals</operation>
                <valueField>Mass_Mailing_Campaign__c.Record_Type_Pick__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Mass_Mailing_Campaign__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Full_Name__c</fullName>
        <description>CX Tracker</description>
        <formula>Inquirer__r.Account.Name</formula>
        <label>Organization Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue_Tracker__c</fullName>
        <description>CX Tracker</description>
        <label>Overdue Tracker</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CX Tracker</description>
        <inlineHelpText>CX POC - click this box if your inquiry status has been “In Progress or Needs More Information” for more than 4 weeks.</inlineHelpText>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Email__c</fullName>
        <description>CX Tracker</description>
        <formula>Point_of_Contact_New__r.Email</formula>
        <label>Point of Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field for the person to whom the form refers. For CX Tracker submissions. John Jenkins, 2019.04.12.</description>
        <inlineHelpText>CX Team member assigned to the Issue</inlineHelpText>
        <label>Point of Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Submissions (Point of Contact)</relationshipLabel>
        <relationshipName>Submission2254rr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Phone__c</fullName>
        <description>CX Tracker</description>
        <formula>Point_of_Contact_New__r.Phone</formula>
        <label>Point of Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positive_Negative_Feedback__c</fullName>
        <label>Positive/Negative Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
                <value>
                    <fullName>Positive Alternative 1</fullName>
                </value>
                <value>
                    <fullName>Positive Alternative 2</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postmark_Date__c</fullName>
        <label>Postmark Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPIO_Name__c</fullName>
        <description>CX Tracker</description>
        <formula>Inquirer__r.Company_Name__c</formula>
        <label>RPIO Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Type_Pick__c</fullName>
        <description>Docket comment application.</description>
        <label>Record Type Pick</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Docket_Record_Type_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsible_OEI_Office__c</fullName>
        <description>CX Tracker</description>
        <formula>SME_New__r.Department</formula>
        <label>Responsible OEI Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field for the person to whom the form refers. For CX Tracker submissions. John Jenkins, 2019.04.12.</description>
        <inlineHelpText>Subject Matter Expert for the Issue.</inlineHelpText>
        <label>SME</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Submissions (SME)</relationshipLabel>
        <relationshipName>Submissions11erer4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SME_Notification_Date__c</fullName>
        <description>CX Tracker</description>
        <label>SME Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SME_Response_Date__c</fullName>
        <description>CX Tracker</description>
        <label>SME Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SME_Response__c</fullName>
        <description>CX Tracker</description>
        <inlineHelpText>Response from Subject Matter Expert assisting the Issue</inlineHelpText>
        <label>SME Response</label>
        <length>7500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_OCAPPM__c</fullName>
        <description>CX Tracker</description>
        <label>Inquiry Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending SME</fullName>
                </value>
                <value>
                    <fullName>Long Term Solution Needed</fullName>
                </value>
                <value>
                    <fullName>Need More Info</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category_OCAPPM__c</fullName>
        <description>CX Tracker</description>
        <inlineHelpText>Issue Sub-Category assigned by OCAPPM Staff. Available options for this is based on the Category selected.</inlineHelpText>
        <label>Inquiry Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category_OCAPPM__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>508 Compliance</fullName>
                </value>
                <value>
                    <fullName>Agile Blanket Purchase Agreement</fullName>
                </value>
                <value>
                    <fullName>Applications Development</fullName>
                </value>
                <value>
                    <fullName>Architecture Input</fullName>
                </value>
                <value>
                    <fullName>CDM</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Collaboration Services</fullName>
                </value>
                <value>
                    <fullName>CPIC</fullName>
                </value>
                <value>
                    <fullName>Data Analytics Services</fullName>
                </value>
                <value>
                    <fullName>Data Integration</fullName>
                </value>
                <value>
                    <fullName>Data Management Services</fullName>
                </value>
                <value>
                    <fullName>Data Warehousing</fullName>
                </value>
                <value>
                    <fullName>Desktop Services</fullName>
                </value>
                <value>
                    <fullName>Development (Apps)</fullName>
                </value>
                <value>
                    <fullName>Digital Services</fullName>
                </value>
                <value>
                    <fullName>e-Discovery</fullName>
                </value>
                <value>
                    <fullName>Enterprise Hosting</fullName>
                </value>
                <value>
                    <fullName>e-Reporting</fullName>
                </value>
                <value>
                    <fullName>FITARA Reviews</fullName>
                </value>
                <value>
                    <fullName>FOIA</fullName>
                </value>
                <value>
                    <fullName>Identity Management</fullName>
                </value>
                <value>
                    <fullName>Information Directives</fullName>
                </value>
                <value>
                    <fullName>Information Exchange</fullName>
                </value>
                <value>
                    <fullName>Lotus Notes</fullName>
                </value>
                <value>
                    <fullName>Need More Data</fullName>
                </value>
                <value>
                    <fullName>Office 365</fullName>
                </value>
                <value>
                    <fullName>Paperless</fullName>
                </value>
                <value>
                    <fullName>Printer Services</fullName>
                </value>
                <value>
                    <fullName>Quality Management System</fullName>
                </value>
                <value>
                    <fullName>Records Management System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Link__c</fullName>
        <label>Submission Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Submission_Number__c</fullName>
        <externalId>true</externalId>
        <label>Submission Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Status__c</fullName>
        <label>Submission Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submission Entered</fullName>
                    <default>true</default>
                    <label>Submission Entered</label>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
                <value>
                    <fullName>Initially Reviewed</fullName>
                </value>
                <value>
                    <fullName>Printed for Reading</fullName>
                </value>
                <value>
                    <fullName>Snippets Entered</fullName>
                </value>
                <value>
                    <fullName>Agency Ready</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <isActive>false</isActive>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Pending Response</fullName>
                    <isActive>false</isActive>
                    <label>Pending Response</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Substantive__c</fullName>
        <label>Substantive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                    <default>true</default>
                    <label>Maybe</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic</label>
        <referenceTo>Topic__c</referenceTo>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Submissions of information, documents, questions, comments, etc.  Initially used for DCM to capture information on submissions of comments on dockets.  Also used for submission of inquiries to the Customer Experience team in the CX Action Tracker (CXAT).</description>
    <label>Submission</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Submission ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All_WOTUS_Step_1</fullName>
        <columns>NAME</columns>
        <columns>Submission_Number__c</columns>
        <columns>Submission_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Submission__c.Waters_of_the_US_Step_1_SUPP</value>
        </filters>
        <label>All WOTUS Step 1-SUPP</label>
    </listViews>
    <listViews>
        <fullName>All_Waters_of_the_US</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Submission_Number__c</columns>
        <columns>Commenter_Category__c</columns>
        <columns>Commenter_Name__c</columns>
        <columns>Agency_Name__c</columns>
        <columns>Letter_Type__c</columns>
        <columns>Submission_Status__c</columns>
        <columns>Have_Snippets__c</columns>
        <columns>Submission_Link__c</columns>
        <columns>Geographic_Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Submission__c.Waters_of_the_US</value>
        </filters>
        <label>All Waters of the US</label>
    </listViews>
    <listViews>
        <fullName>Bristol_Bay</fullName>
        <columns>NAME</columns>
        <columns>Commenter_Name__c</columns>
        <columns>Commenter_Category__c</columns>
        <columns>Submission_Number__c</columns>
        <columns>Submission_Status__c</columns>
        <columns>Positive_Negative_Feedback__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Agency_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Submission__c.Bristol_Bay</value>
        </filters>
        <label>All Bristol Bay</label>
    </listViews>
    <listViews>
        <fullName>CX_Action_Tracker1</fullName>
        <columns>NAME</columns>
        <columns>Inquiry_Name__c</columns>
        <columns>Inquirer__c</columns>
        <columns>Organization_Full_Name__c</columns>
        <columns>Point_of_Contact_New__c</columns>
        <columns>Status_OCAPPM__c</columns>
        <filterScope>Mine</filterScope>
        <label>CX Action Tracker</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_CX_Action_Tracker</fullName>
        <columns>NAME</columns>
        <columns>Inquiry_Name__c</columns>
        <columns>Inquirer__c</columns>
        <columns>Organization_Full_Name__c</columns>
        <columns>Point_of_Contact_New__c</columns>
        <columns>Status_OCAPPM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Point_of_Contact_New__c</field>
            <operation>contains</operation>
            <value>Renee Wilson-Brewer</value>
        </filters>
        <label>Renee's CX Action Tracker</label>
    </listViews>
    <listViews>
        <fullName>Dawn_s_CX_Action_Tracker</fullName>
        <columns>NAME</columns>
        <columns>Inquiry_Name__c</columns>
        <columns>Inquirer__c</columns>
        <columns>Organization_Full_Name__c</columns>
        <columns>Point_of_Contact_New__c</columns>
        <columns>Status_OCAPPM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Point_of_Contact_New__c</field>
            <operation>contains</operation>
            <value>Dawn Banks</value>
        </filters>
        <label>Dawn's CX Action Tracker</label>
    </listViews>
    <listViews>
        <fullName>Felicia_s_CX_Action_Tracker</fullName>
        <columns>NAME</columns>
        <columns>Inquiry_Name__c</columns>
        <columns>Inquirer__c</columns>
        <columns>Organization_Full_Name__c</columns>
        <columns>Point_of_Contact_New__c</columns>
        <columns>Status_OCAPPM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Point_of_Contact_New__c</field>
            <operation>contains</operation>
            <value>Felicia Tarver</value>
        </filters>
        <label>Felicia's CX Action Tracker</label>
    </listViews>
    <listViews>
        <fullName>First_KS</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>First - KS</label>
    </listViews>
    <listViews>
        <fullName>Gemma_test</fullName>
        <columns>NAME</columns>
        <columns>Submission_Number__c</columns>
        <columns>Submission_Status__c</columns>
        <columns>Have_Snippets__c</columns>
        <columns>Agency_Name__c</columns>
        <columns>Commenter_Category__c</columns>
        <columns>Commenter_Name__c</columns>
        <columns>Geographic_Origin__c</columns>
        <columns>Submission_Link__c</columns>
        <columns>Docket_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Submission__c.Missouri_NNC_Docket</value>
        </filters>
        <filters>
            <field>Have_Snippets__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <label>Missouri NNC Submissions</label>
    </listViews>
</CustomObject>